[project]
name = "blackjack-sim"
version = "0.1.0"
description = "Interactive blackjack simulator"
package-data = {blackjack_sim = ["py.typed"]}
authors = [
    { name = "Ben Brown" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[project.scripts]
blackjack = "blackjack_sim.cli:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage",
    "jedi-language-server",
    "pytest",
    "ruff",
    "ty",
]

[tool.ty.rules]
# FIXME: Default values in cli.py::common_options() cause type confusion
invalid-parameter-default = "ignore"
